# deepresearch-agent

./: .env.example  .example_env  .gitignore  README.md  config.example.yaml  config.yaml  docker-compose.yml  main.py  pyproject.toml  router.py  run.py
langfuse/: .env.example  docker-compose.yml
src/backend/api/: schemas.py  server.py
src/backend/core/: config.py  logging.py
src/backend/domain/: interfaces.py  models.py
src/backend/infrastructure/agents/: orchestrator_agent.py  planner_agent.py  reflector_agent.py  states.py  utils.py  worker_agent.py
src/backend/infrastructure/agents/prompt/: planner_prompt.py  reflector_prompt.py  reporter_prompt.py  worker_prompt.py
src/backend/infrastructure/langfuse/: factory.py
src/backend/infrastructure/llm/: clients.py  factory.py  reranker.py
src/backend/infrastructure/parse/: factory.py  parser.py  preprocessor.py  splitter.py  vlm_enrichment_pipeline.py  vlm_enrichment_pipeline_options.py  vlm_enrichment_pipeline_word.py
src/backend/infrastructure/parse/enrichment_models/: formula_enrichment_model.py  (+3 more)
src/backend/infrastructure/repository/: factory.py  mappings.py  opensearch_store.py  retriever.py
src/backend/services/: agent_service.py  factory.py  ingestion_service.py  retrieval_service.py
src/frontend/: package-lock.json  package.json  tailwind.config.js
src/frontend/src/: App.jsx  index.css
test/parser_test/: parse_test.py  test.ipynb  test.md
tests/backend/infrastructure/repository/: test_opensearch_store.py
tests/backend/services/: test_factory.py  test_ingestion_service.py
(+1 files in other folders)
