[project]
name = "deepresearch-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docling==2.58.0",
    "docling-core==2.49.0",
    "dotenv>=0.9.9",
    "json-repair>=0.53.0",
    "langchain>=1.0.5",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.0.2",
    "litellm[proxy]>=1.79.3",
    "openai>=2.7.2",
    "pillow",
    "pydantic>=2.12.4",
]
